2000-05-10  Bart Schaefer  <schaefer@zsh.org>

	* 11312: Config/config.mk: defs.mk depends on config.status.

2000-05-10  Tanaka Akira  <akr@zsh.org>

	* 11309, 11310: Doc/Zsh/expn.yo: fix missing section.

2000-05-10  Bart Schaefer  <schaefer@zsh.org>

	* 11302: Functions/Zle/edit-command-line: Cursor placement and
	defensive programming.

2000-05-10  Oliver Kiddle  <opk@zsh.org>

	* 11301: Src/Zle/zle_misc.c: AIX dependency fix

	* 11300: Completion/User/_nedit: fix breakage from 11195

2000-05-10  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11299: Bart/pws: Functions/Zle/edit-command-line: edit command
	line with external editor.

2000-05-10  Sven Wischnowsky  <wischnow@zsh.org>

	* 11298: Doc/Zsh/compsys.yo, Src/Zle/computil.c: more fixes for
 	_arguments and its docs
	
2000-05-10  Bart Schaefer  <schaefer@zsh.org>

	* 11297: Doc/Zsh/compwid.yo, Doc/Zsh/zle.yo: Document that ZLE
	user-defined widget functions are executed with standard input
	closed.
	
2000-05-10  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* Naoki Wakamatsu: 11287: Completion/Core/compinstall: tab had
	incorrectly turned to spaces.

2000-05-10  Sven Wischnowsky  <wischnow@zsh.org>

	* 11295: Doc/Zsh/compsys.yo, Src/Zle/computil.c: misc. _arguments
 	fixes
	
	* 11294: Src/Zle/computil.c: fix for `-+opt' with mutex list
	
	* 11292: Completion/Core/_files: update `%p' replacement in _files
	
2000-05-09  Bart Schaefer  <schaefer@zsh.org>

	* 11288: Completion/Commands/_complete_help,
	Completion/Core/_main_complete: Reopen stdin from /dev/null,
	because ZLE closes it during any widget function, which confuses
	some external programs.

2000-05-09  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* pws: 11285: Src/Modules/zftp.c: move cleanup code to
	zftp_cleanup() to be called from exit hook.

2000-05-09  Oliver Kiddle  <opk@zsh.org>

	* 11284: Completion/Base/_math: use _math to complete the let builtin

	* 11282: Completion/Builtins/_vars_eq: complete using _arguments